# intspan

./: .editorconfig  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  appveyor.yml  benchmarks.md  hook.sh  release.toml
.github/workflows/: build.yml  codecov.yml  publish.yml  rust.yml
benchmarks/: far.md  implementations.md  linkr.md  musl.md  rgr.md  spanr.md
benchmarks/linkr/: links.blast.tsv  links.lastz.tsv  run.sh  sort.clean.tsv
benchmarks/musl/: run.sh
benchmarks/spanr/: dust.yml  run.sh  sep-gene.yml
doc/: dazz.md  intspans.tex  ranges.tex
examples/: benchmark.rs  file.rs  test.rs
src/: bin.rs  cli.rs  coverage.rs  far.rs  fasr.rs  intspan.rs  lib.rs  linkr.rs  main.rs  nwr.rs  ovlpr.rs  range.rs  rgr.rs  spanr.rs  test.rs  utils.rs
src/cmd/: combine.rs  compare.rs  convert.rs  cover.rs  genome.rs  gff.rs  merge.rs  mod.rs  range.rs  some.rs  span.rs  split.rs  stat.rs  statop.rs  test.rs
src/cmd_far/: mod.rs  region.rs  size.rs  some.rs
src/cmd_fasr/: axt2fas.rs  check.rs  concat.rs  consensus.rs  cover.rs  create.rs  filter.rs  join.rs  link.rs  maf2fas.rs  mod.rs  name.rs  pl_p2m.rs  refine.rs  replace.rs  separate.rs  slice.rs  split.rs  stat.rs  subset.rs  variation.rs  xlsx.rs
src/cmd_linkr/: circos.rs  clean.rs  connect.rs  filter.rs  merge.rs  mod.rs  sort.rs
src/cmd_nwr/: append.rs  download.rs  info.rs  lineage.rs  member.rs  mod.rs  restrict.rs  some.rs  txdb.rs
src/cmd_ovlpr/: covered.rs  mod.rs  paf2ovlp.rs  replace.rs  restrict.rs
src/cmd_rgr/: count.rs  dedup.rs  field.rs  filter.rs  keep.rs  md.rs  merge.rs  mod.rs  pl_2rmp.rs  prop.rs  replace.rs  runlist.rs  select.rs  sort.rs  span.rs
src/cmd_spanr/: combine.rs  compare.rs  convert.rs  count.rs  cover.rs  coverage.rs  genome.rs  gff.rs  merge.rs  mod.rs  range.rs  some.rs  span.rs  split.rs  stat.rs  statop.rs
src/libs/: alignment.rs  coverage.rs  fas.rs  intspan.rs  linalg.rs  maf.rs  matrix.rs  mod.rs  overlap.rs  range.rs  taxonomy.rs
tests/: binary.rs  cli.rs  cli_far.rs  cli_fasr.rs  cli_linkr.rs  cli_nwr.rs  cli_ovlpr.rs  cli_rgr.rs  cli_rgr_generic.rs  cli_rgr_tsv.rs  cli_spanr.rs  create.rs  index.rs  intspan.rs  linkr.rs  membership.rs  relation.rs  spanops.rs  spanr.rs  synopsis.rs
tests/S288c/: links.blast.tsv  links.lastz.tsv
tests/far/: lst.txt  region.txt  ufasta.fa
tests/fasr/: A_tha.pair.fas  I.connect.tsv  I.name.tsv  NC_000932.fa  NC_000932.fa.fai  RM11_1a.chr.sizes  S288cvsRM11_1a.slice.fas  S288cvsSpar.slice.fas  S288cvsYJM789.slice.fas  example.axt  example.fas  example.maf  genome.fa  genome.fa.fai  genomes.fa  genomes.fa.fai  name.lst  refine.fas  refine.fasta  refine2.fas  replace.fail.tsv  replace.remove.tsv  replace.tsv  slice.fas  slice.json
tests/linkr/: II.clean.tsv  II.connect.tsv  II.links.tsv  II.merge.tsv  II.sort.tsv
tests/nwr/: .gitignore  taxon-valid.tsv  taxon.tsv  taxonomy.sqlite
tests/ovlpr/: 11_2.long.paf  1_4.anchor.fasta  1_4.ovlp.tsv  1_4.pac.fasta  1_4.pac.fasta.fai  1_4.pac.paf  1_4.pac.paf.ovlp.tsv  1_4.renamed.fasta  1_4.replace.tsv  1_4.restrict.tsv  1_4.show.txt
tests/resources/: Atha.yml  I.II.yml  NC_007942.gff  S288c.chr.sizes  S288c.ranges  S288c.txt  dazzname.txt  paralog.yml  repeat.yml
tests/rgr/: ctg.range.tsv  ctg.tsv  ctg_2_1_.gc.tsv  intergenic.yml  tn.tsv
tests/spanr/: Atha.json  Atha.list  I.II.json  I.json  I.yml  II.other.json  II.yml  NC_007942.rm.gff  brca2.json  brca2.yml  intergenic.json  paralog.json  repeat.json
