[package]
name = "intspan"
version = "0.6.1"
authors = ["wang-q <wang-q@outlook.com>"]
description = "Command line tools for IntSpan related bioinformatics operations"
documentation = "https://github.com/wang-q/intspan"
homepage = "https://github.com/wang-q/intspan"
repository = "https://github.com/wang-q/intspan"
readme = "README.md"
categories = ["command-line-utilities", "science"]
license = "MIT"
edition = "2018"

[badges]
travis-ci = { repository = "wang-q/intspan", branch="0.6.1" }
appveyor = { repository = "wang-q/intspan" }

[lib]
name = "intspan"

[[bin]]
name = "spanr"
path = "src/spanr.rs"

[[bin]]
name = "linkr"
path = "src/linkr.rs"

[[bin]]
name = "ovlpr"
path = "src/ovlpr.rs"

[[example]]
name = "test"

[[example]]
name = "benchmark"

[[example]]
name = "file"

[dependencies]
clap = { version = "3.1.1", features = ["derive", "cargo"] }
serde = "1.0"
serde_yaml = "0.8"
regex = "1"
lazy_static = "1.3.0"
petgraph = "0.4.13"
indexmap = "1.1.0"
flate2 = "1.0"
itertools = "0.10.3"
bio = "0.30.0"

[build-dependencies]

[dev-dependencies]
tempfile = "3.1.0"
assert_cmd = "0.11"
predicates = "1"

[profile.release]
lto = true
