[package]
name = "intspan"
version = "0.7.0"
authors = ["wang-q <wang-q@outlook.com>"]
description = "Command line tools for IntSpan related bioinformatics operations"
documentation = "https://github.com/wang-q/intspan"
homepage = "https://github.com/wang-q/intspan"
repository = "https://github.com/wang-q/intspan"
readme = "README.md"
categories = ["command-line-utilities", "science"]
license = "MIT"
edition = "2018"

[lib]
name = "intspan"

[[bin]]
name = "spanr"
path = "src/spanr.rs"

[[bin]]
name = "linkr"
path = "src/linkr.rs"

[[bin]]
name = "ovlpr"
path = "src/ovlpr.rs"

[[bin]]
name = "rgr"
path = "src/rgr.rs"

[[example]]
name = "test"

[[example]]
name = "benchmark"

[[example]]
name = "file"

[dependencies]
clap = { version = "3.2.2", features = ["cargo"] }
serde = "1.0.137"
serde_yaml = "0.8.24"
regex = "1.5.6"
lazy_static = "1.4.0"
flate2 = "1.0.24"
itertools = "0.10.3"

petgraph = "0.6.2"
indexmap = "1.8.2"
rust-lapper = "1.0.1"

[build-dependencies]

[dev-dependencies]
tempfile = "3.3.0"
assert_cmd = "2.0.4"
predicates = "2.1.1"

[profile.release]
lto = true
