[package]
name = "intspan"
version = "0.7.4"
authors = ["wang-q <wang-q@outlook.com>"]
description = "Command line tools for IntSpan related bioinformatics operations"
documentation = "https://github.com/wang-q/intspan"
homepage = "https://github.com/wang-q/intspan"
repository = "https://github.com/wang-q/intspan"
readme = "README.md"
categories = ["command-line-utilities", "science"]
license = "MIT"
edition = "2018"

[lib]
name = "intspan"

[[bin]]
name = "spanr"
path = "src/spanr.rs"

[[bin]]
name = "linkr"
path = "src/linkr.rs"

[[bin]]
name = "ovlpr"
path = "src/ovlpr.rs"

[[bin]]
name = "rgr"
path = "src/rgr.rs"

[[bin]]
name = "fasr"
path = "src/fasr.rs"

[[example]]
name = "test"

[[example]]
name = "benchmark"

[[example]]
name = "file"

[dependencies]
clap = { version = "4.3.12", features = ["cargo"] }
serde = "1.0.171"
serde_json = "1.0.103"
anyhow = "1.0.72"
regex = "1.9.1"
lazy_static = "1.4.0"
flate2 = "1.0.26"
itertools = "0.11.0"

petgraph = "0.6.3"
indexmap = "2.0.0"
rust-lapper = "1.1.0"
bio = "0.30.1"
crossbeam = "0.8.2"
rust_xlsxwriter = "0.43.0"

which = "4.4.0"
cmd_lib = "1.3.0"
tempfile = "3.6.0"
path-clean = "1.0.1"

[build-dependencies]

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.3"

[profile.release]
lto = true
